kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tema-std
  labels:
    name: tema-std
    app: ai-chat-app
