kubernetes/nginx.yaml
# Deployment pentru NGINX
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: tema-std
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
            - containerPort: 90
            - containerPort: 100
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/sites-available/default
              subPath: default
            - name: nginx-config
              mountPath: /etc/nginx/sites-enabled/default
              subPath: default
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
---
# Service pentru a expune NGINX
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
  namespace: tema-std
spec:
  type: LoadBalancer
  selector:
    app: nginx-ingress
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: chat
      port: 90
      targetPort: 90
    - name: ai
      port: 100
      targetPort: 100
